# nbody

./: README.md
src/cuda/: Makefile
src/cuda/brownian/: Makefile  nBodyBrownian
src/cuda/brownian/src/: common_brown.hpp  main_brown.cu
src/cuda/newton/: .gitignore  .ycm_extra_conf.py  1  CMakeLists.txt  Makefile  nBodyNewton
src/cuda/newton/include/: common.hpp  graphics.hpp  simulation.hpp
src/cuda/newton/src/: .launch.cu.swp  common.cpp  common.hpp  graphics.cpp  graphics.cu  graphics.hpp  launch.cu  main.cpp  main_newton.cu  simulation.cpp  simulation.cu  simulation.hpp
src/cuda/oldschool/cuda/brown/: Makefile
src/cuda/oldschool/cuda/brown/src/: common_brown.hpp  main.cu~  main_brown.cu  main_brown.cu~  simulationBrawnian.cpp~
src/cuda/oldschool/cuda/newton/: Makefile
src/cuda/oldschool/cuda/newton/src/: common.hpp~  common_newton.hpp  easyTestcuda.cu~  main.cpp~  main.cu~  main_newton.cu  main_newton.cu~
src/serial/brownian/: makefile  nbody
src/serial/brownian/src/: common.hpp  graphics.cpp  main.cpp  simulationBrawnian.cpp
src/serial/newtonian/: nbody
src/serial/newtonian/src/: common.hpp  graphics.cpp  main.cpp  simulationNewton.cpp
